<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".scan"
    android:background="@color/offwhite">

    <TextView
        android:id="@+id/bluetoothStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/bluetoothIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_bluetooth_off"/>

    <Button
        android:id="@+id/turnOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/turn_on"
        android:minWidth="200dp"/>

    <Button
        android:id="@+id/turnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/turn_off"
        android:minWidth="200dp"/>

    <Button
        android:id="@+id/discoverable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/discoverable"
        android:minWidth="200dp"/>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:minWidth="200dp"
        android:text="@string/search" />

    <TextView
        android:id="@+id/searchTv"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/pairedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/get_paired_devices"
        android:minWidth="200dp"/>

    <TextView
        android:id="@+id/pairedTv"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/pairedBtn"/>

</LinearLayout>